fix: prevent video UI from jumping when loading

--- a/components/SnappingFeed/Slide/Video/index.scss
+++ b/components/SnappingFeed/Slide/Video/index.scss
@@ -7,6 +7,11 @@
     &:last-of-type {
         min-width: auto;
         width: fit-content;
+
+        @media (max-width: 850px) {
+            width: 100%;
+            height: 100%;
+        }
     }
 
     &[data-orientation="landscape"] {
